<resources>
    <string name="app_name">GRUB</string>
    <string name="app_tagline">Discover restaurants near you and order delicious food</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="restaurants_near_you">Restaurants Near You</string>
    <string name="search_restaurants">Search restaurants or cuisines</string>
    <string name="error_loading_restaurants">Error loading restaurants. Please try again later.</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="view_menu">View Menu</string>
    <string name="address">Address</string>
    <string name="menu">Menu</string>
    <string name="error_loading_menu">Error loading menu. Please try again later.</string>
    <string name="view_cart">View Cart</string>
    <string name="food_image">Food Image</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="remove_item">Remove Item</string>
    <string name="order_placed_successfully">Order Placed Successfully!</string>
    <string name="order_success">Order Success</string>
    <string name="order_details">Order Details</string>
    <string name="return_to_home">Return to Home</string>
    <string name="app_logo">App Logo</string>
    
    <!-- Splash Screen -->
    <string name="welcome_to_grub">WELCOME TO GRUB APP</string>
    <string name="app_description">Your go-to app for exploring local favorites and satisfying your hunger effortlessly!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    
    <!-- Login Screen -->
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="email_hint">Email address *</string>
    <string name="password_hint">Password *</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
    <string name="or_continue_with">OR CONTINUE WITH</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    
    <!-- Tour Guide -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="get_started">GET STARTED</string>
    <string name="tour_order_title">Order your Favorite</string>
    <string name="tour_delivery_title">Fast Delivery</string>
    <string name="tour_tracking_title">Live Tracking</string>
    <string name="tour_order_desc">Lorem ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="tour_delivery_desc">Get your food delivered fast and enjoy your meal while it\'s hot.</string>
    <string name="tour_tracking_desc">Track your order in real-time from the restaurant to your doorstep.</string>
    
    <!-- Location Selection -->
    <string name="select_your_location">SELECT YOUR LOCATION</string>
    <string name="address_details">Address Details</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="friends">Friends</string>
    <string name="full_name_hint">Full Name*</string>
    <string name="street_address_hint">Address (street name, building name)*</string>
    <string name="city_address_hint">Address (city/village name)</string>
    <string name="landmark_hint">Nearby Landmark (optional)</string>
    <string name="save_address">Save Address</string>
    <string name="location_permission_needed">Location permission is required to select your location</string>
</resources>
