<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnRemove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Food Item Name" />

        <TextView
            android:id="@+id/tvItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemName"
            tools:text="$12.99" />

        <ImageButton
            android:id="@+id/btnDecrease"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/decrease_quantity"
            android:src="@android:drawable/ic_menu_remove"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/tvQuantity"
            app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
            app:layout_constraintTop_toTopOf="@+id/tvQuantity" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:minWidth="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemPrice"
            app:layout_constraintEnd_toStartOf="@+id/btnIncrease"
            app:layout_constraintTop_toTopOf="@+id/tvItemPrice"
            tools:text="1" />

        <ImageButton
            android:id="@+id/btnIncrease"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/increase_quantity"
            android:src="@android:drawable/ic_menu_add"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/tvQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvQuantity" />

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_item"
            android:src="@android:drawable/ic_menu_delete"
            android:tint="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
